--- a/DAM.Presentation/DAM.Presentation.csproj
+++ b/DAM.Presentation/DAM.Presentation.csproj
@@ -14,5 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.3" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.3" />
+        
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.3" />
     </ItemGroup>
 </Project>
