--- a/DAM.Backend/DAM.Backend.csproj
+++ b/DAM.Backend/DAM.Backend.csproj
@@ -22,6 +22,8 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
+      <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     </ItemGroup>
 
 </Project>
