--- a/DAM.Backend/DAM.Backend.csproj
+++ b/DAM.Backend/DAM.Backend.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="DummyData\" />
       <Folder Include="Migrations\" />
       <Folder Include="OldTests\" />
     </ItemGroup>
