--- a/DAM.Presentation/DAM.Presentation.csproj
+++ b/DAM.Presentation/DAM.Presentation.csproj
@@ -12,11 +12,14 @@
     <ItemGroup>
         <PackageReference Include="Blazor.Bootstrap" Version="3.3.1" />
         <PackageReference Include="BlazorSortableList" Version="2.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.4" />
+        <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
         
-        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.4" />
+        
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
     </ItemGroup>
 
     <ItemGroup>
