--- a/DAM.Backend/DAM.Backend.csproj
+++ b/DAM.Backend/DAM.Backend.csproj
@@ -26,4 +26,8 @@
       <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\Database\" />
+    </ItemGroup>
+
 </Project>
