Refactor: Created DAM.Shared project which contains the requests/responses and the models.

--- a/DAM.Presentation/DAM.Presentation.csproj
+++ b/DAM.Presentation/DAM.Presentation.csproj
@@ -6,6 +6,10 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <ProjectReference Include="..\DAM.Shared\DAM.Shared.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <SupportedPlatform Include="browser" />
     </ItemGroup>
 
